--- a/Rapport Stage/texFiles/Remerciements.tex
+++ b/Rapport Stage/texFiles/Remerciements.tex
@@ -1,1 +1,7 @@
 \chapter{Remerciements}\label{Remerciements}
+Je souhaiterais addresseé mes remerciements:
+\begin{itemize}
+  \item Monsieur Andrei Doncescu qui m'a proposé ce stage et qui a été mon maître de stage durant tout ce projet.
+  \item Le LAMIA d'avoir pu m'accueillir en son sein.
+  \item Mon collègue stagiaire stéphane qui m'a aidé dans la recherche de document
+\end{itemize}
