--- a/Rapport Stage/texFiles/conclusion.tex
+++ b/Rapport Stage/texFiles/conclusion.tex
@@ -3,11 +3,15 @@
 
 \section{Rappel de la problèmatique}
 
+Notre problèmatique à la base était la résolution de sudoku Standart ce que nous avons reussi. Nous avons donc pour avoir une autre vision du problème nous avons choisi de généraliser celui-ci. Ce qui nous a ouvert à des pistes d'améliorations dont nous n'aurions pas eu besoin dans le cas de la résolution de sudoku.
+
 \section{Réponse apportées}
 
 \section{Piste d'amélioration}
+Nous pourrions pour voir les limite de l'algorithme du Cplex l'utiliser sur un grand volume de sudopku et voir le temps mis pour tous les résoudre en une seule fois. Nous pourrions essayer avec des sudokus d'une taille extrème pour en vérifier la consistence.\newline Comme dit précédemment en ce qui concerne la déduction des valeur nous pouvons évviter beaucoup de test inutiles grace à cela.
 
 \section{Les apports du stage}
+
 \subsection{les apports a l'entreprise}
 
 \subsection{les apports personels}
