--- a/Rapport Stage/texFiles/Introduction.tex
+++ b/Rapport Stage/texFiles/Introduction.tex
@@ -134,7 +134,9 @@ Cplex est une librairie\footref{librairie} qui permet la modélisation et la ré
 \end{figure}
 
 
-Nous pouvons définir GitHub comme une plateforme de développement de projet informatique en groupe. Elle simplifie grandement le développement de projets. Elle permet de versioner ses programmes et d'y apporter des modifications en temps réel à plusieurs.
+Nous pouvons définir GitHub comme une plateforme de développement de projet informatique en groupe. Elle simplifie grandement le développement de projets. Elle permet de versioner ses programmes et d'y apporter des modifications en temps réel à plusieurs. Ce rapport ainsi que le code généré durand le projet en plus de ce trouver en annexe ce trouverons aussi sur github à ces addresses:\newline
+Rapport de Stage: \url{https://github.com/MrMinatchy2/Rapport-de-stage-2021} \newline
+Code généré: \url{https://github.com/MrMinatchy2/Projet-de-Stage} \newline
 
 \subsubsection{Présentation de LaTex}
 
@@ -168,5 +170,4 @@ Nous finirons par présenter et analyser nos résultats.\newline
 \subsection{Conclusion}
 Nous terminerons ce rapport par une conclusion où nous rappelerons brièvement la problématique.\newline
 Nous ferons le bilan des produits du projet de stage.\newline
-Nous ferons le bilan des apports du stage.\newline
-Et finirons par une ouverture en étudiants nos perspectives.
+Et ferons le bilan des apports du stage.\newline
