--- a/Rapport Stage/texFiles/pageDeGarde.tex
+++ b/Rapport Stage/texFiles/pageDeGarde.tex
@@ -18,7 +18,7 @@
 
     \begin{center}
       \vspace*{2cm}
-      \includegraphics[width=6.5cm]{./images/n_a.jpg}
+      \includegraphics[width=6.5cm]{./images/sudoku1.jpeg}
     \end{center}
 
     \vspace*{2cm}
